--- a/resources/style.css
+++ b/resources/style.css
@@ -3,10 +3,15 @@ body {
   font-family: Helvetica;
   font-size: 22px;
   color: seashell;
-  background-color: black;
   opacity: .9;
+  background-color: black;
 }
 
+h2,
+h4 {
+  margin: 0;
+  padding: 10px;
+}
 
 /*Navigation Section */
 .navigation {
@@ -31,10 +36,27 @@ img {
   color: seashell;
   text-decoration: underline;
   padding-right: 10px;
-
+  opacity: .9;
 }
 /*Header Section */
+.header {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  justify-content: center;
+  top: 70px;
+  background-image: url(./image-mission-background.jpg);
+  height: 700px;
+  width: 1200px;
+}
 
+.header__title {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 
 /*Tea of the month Section */
